@@ -37,3 +37,8 @@ See <<seek>> for more information.
 
 Subclasses of `FailedRecordProcessor` (e.g. `SeekToCurrentErrorHandler`, `DefaultAfterRollbackProcessor`, `RecoveringBatchErrorHandler`) can now be configured to reset the retry state if the exception is a different type to that which occurred previously with this record.
 See <<seek-to-current>>, <<after-rollback>>, <<recovering-batch-eh>> for more information.
+
+==== Producer Factory Changes
+
+You can now set a maximum age for producers after which they will be closed and recreated.
+See <<transactions>> for more information.
